--- a/src/style.scss
+++ b/src/style.scss
@@ -1,11 +1,25 @@
-figure.image {
-  height: 250px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+// img.hcPhoto {
+//   // width: 100%;
+//   // height: 100%;
+//   // background-size: contain;
+//   // background-repeat: no-repeat;
+//   // background-position: center;
+//   display: block;
+//   height: auto;
+//   width: 100%;
+// }
+
+// display: flex;
+// flex-direction: column;
+// justify-content: space-between;
+
+
+.tile.is-child{
+
+    background: white-ter;
 }
 
-@charset "utf-8";
-@import "bulmaswatch/flatly/_variables.scss";
-@import "../node_modules/bulma/bulma.sass";
-@import "bulmaswatch/flatly/_overrides.scss";
+// @charset "utf-8";
+// @import "bulmaswatch/flatly/_variables.scss";
+// @import "../node_modules/bulma/bulma.sass";
+// @import "bulmaswatch/flatly/_overrides.scss";
