--- a/src/style.scss
+++ b/src/style.scss
@@ -19,7 +19,7 @@
     background: white-ter;
 }
 
-// @charset "utf-8";
-// @import "bulmaswatch/flatly/_variables.scss";
-// @import "../node_modules/bulma/bulma.sass";
-// @import "bulmaswatch/flatly/_overrides.scss";
+@charset "utf-8";
+@import "bulmaswatch/flatly/_variables.scss";
+@import "../node_modules/bulma/bulma.sass";
+@import "bulmaswatch/flatly/_overrides.scss";
