--- a/src/style.scss
+++ b/src/style.scss
@@ -23,8 +23,8 @@
 // @import "bulmaswatch/flatly/_variables.scss";
 // @import "../node_modules/bulma/bulma.sass";
 // @import "bulmaswatch/flatly/_overrides.scss";
-
-figure.image {
+//
+figure.image-user {
   height: 250px;
   background-size: contain;
   background-repeat: no-repeat;
