--- a/src/style.scss
+++ b/src/style.scss
@@ -30,3 +30,8 @@ figure.image-user {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.has-image-centered {
+  margin-left: auto;
+  margin-right: auto;
+}
