--- a/src/style.scss
+++ b/src/style.scss
@@ -19,6 +19,12 @@
     background: white-ter;
 }
 
+.card-equal-height {
+   display: flex;
+   flex-direction: column;
+   height: 100%;
+}
+
 // @charset "utf-8";
 // @import "bulmaswatch/flatly/_variables.scss";
 // @import "../node_modules/bulma/bulma.sass";
