--- a/src/style.scss
+++ b/src/style.scss
@@ -25,11 +25,11 @@
    height: 100%;
 }
 
-// @charset "utf-8";
-// @import "bulmaswatch/flatly/_variables.scss";
-// @import "../node_modules/bulma/bulma.sass";
-// @import "bulmaswatch/flatly/_overrides.scss";
-//
+@charset "utf-8";
+@import "bulmaswatch/lux/_variables.scss";
+@import "../node_modules/bulma/bulma.sass";
+@import "bulmaswatch/lux/_overrides.scss";
+
 figure.image-user {
   height: 250px;
   background-size: contain;
