--- a/src/style.scss
+++ b/src/style.scss
@@ -41,3 +41,9 @@ figure.image-user {
   margin-left: auto;
   margin-right: auto;
 }
+
+.columns.is-vcentered {
+  -webkit-box-align: center;
+     -ms-flex-align: center;
+        align-items: center;
+}
