--- a/src/style.scss
+++ b/src/style.scss
@@ -47,3 +47,8 @@ figure.image-user {
      -ms-flex-align: center;
         align-items: center;
 }
+
+.carousel
+  .slide {
+  background-color: white;
+}
