carousel bacground color

--- a/src/style.scss
+++ b/src/style.scss
@@ -35,6 +35,7 @@ figure.image-user {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+
 }
 
 .has-image-centered {
@@ -49,7 +50,13 @@ figure.image-user {
 
 }
 
-.carousel
-  .slide {
-  background-color: white;
+ul.slide {
+  background-color: #000;
 }
+
+ul.slide {
+  min-width:100%;
+  margin:0;
+  position:relative;
+  text-align:center;
+  background:#000}
